syntax = "proto3";

package pipelines.runtime.v1alpha1;

option csharp_namespace = "Pipelines.Runtime.V1Alpha1";
option go_package = "github.com/cuemby/ccp-runtime-service/runtimev1alpha1";
option java_multiple_files = true;
option java_outer_classname = "RuntimeProto";
option java_package = "io.cuemby.pipelines.runtime.v1alpha1";
option objc_class_prefix = "PPX";
option php_namespace = "Pipelines\\Runtime\\V1Alpha1";

message Integration{
  string integration_name = 1;
  string repository_url = 2;
}

message Commands{
  string build_command = 1;
  string run_command = 2;
  string port = 3;
}

// Runtime ...
message Runtime {
  string name = 1;
  string namespace = 2;
  Integration integration = 3;
  map<string, string> env_variables = 4;
  Commands commands = 5;
}
